# copilot-rs

./: Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
crates/copilot/: Cargo.toml
crates/copilot-core/: Cargo.toml
crates/copilot-core/src/: analysis.rs  check.rs  error.rs  expr.rs  lib.rs  op.rs  policy.rs  spec.rs  ty.rs
crates/copilot-core/tests/: core.rs
crates/copilot-gen/: Cargo.toml
crates/copilot-gen/src/: lib.rs  rng.rs
crates/copilot-interp/: Cargo.toml
crates/copilot-interp/src/: eval.rs  lib.rs  monitor.rs
crates/copilot-interp/tests/: semantics.rs
crates/copilot-lang/: Cargo.toml
crates/copilot-lang/src/: builder.rs  classes.rs  error.rs  lib.rs  ops.rs  stream.rs
crates/copilot-lang/tests/: frontend.rs  macro_spec.rs
crates/copilot-libs/: Cargo.toml
crates/copilot-libs/src/: clocks.rs  lib.rs  ltl.rs  mtl.rs  ptltl.rs  state_machine.rs  utils.rs  voting.rs
crates/copilot-libs/tests/: libs.rs
crates/copilot-macro/: Cargo.toml
crates/copilot-macro/src/: lib.rs  spec.rs
crates/copilot-rust/: Cargo.toml
crates/copilot-rust/examples/: emit_crate.rs
crates/copilot-rust/src/: emit.rs  expr.rs  lib.rs  render.rs
crates/copilot-rust/tests/: differential.proptest-regressions  differential.rs  golden.rs  no_std.rs  random_specs.rs
crates/copilot-rust/tests/golden/: arrays.rs  counter.rs  fib.rs  heater.rs  lag.rs  library.rs  locals.rs  maths.rs  operators.rs  structs.rs  total_ops.rs
crates/copilot-rust/tests/support/: mod.rs
crates/copilot-theorem/: Cargo.toml
crates/copilot-theorem/src/: check.rs  encode.rs  induct.rs  lib.rs  sexpr.rs  solver.rs
crates/copilot-theorem/tests/: encoding.rs  prove.rs
crates/copilot-verifier/: Cargo.toml
crates/copilot-verifier/src/: expr.rs  lib.rs  render.rs
crates/copilot-verifier/tests/: independence.rs  kani.rs  reference.rs  support.rs
crates/copilot/examples/: heater.rs
crates/copilot/src/: lib.rs
crates/copilot/tests/: facade_macro.rs
docs/: bisimulation.md  deviations.md  macro.md  semantics.md
