[workspace]
resolver = "3"
members = ["crates/copilot-core", "crates/copilot-lang", "crates/copilot-interp", "crates/copilot", "crates/copilot-rust", "crates/copilot-macro"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
repository = "https://github.com/tinybeachthor/copilot-rs"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
