[workspace]
resolver = "3"
members = ["crates/copilot-core", "crates/copilot-lang", "crates/copilot-interp", "crates/copilot", "crates/copilot-rust", "crates/copilot-macro", "crates/copilot-libs", "crates/copilot-theorem", "crates/copilot-gen", "crates/copilot-verifier"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Let-chains, used in copilot-core, copilot-rust and copilot-theorem, are
# stable only from 1.88 under edition 2024. Checked by the `msrv` CI job.
rust-version = "1.88"
license = "BSD-3-Clause"
repository = "https://github.com/tinybeachthor/copilot-rs"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
