[package]
name = "copilot-gen"
description = "Random well-typed specification generation, for differential testing copilot-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
copilot-core = { path = "../copilot-core", version = "0.1.0" }
copilot-interp = { path = "../copilot-interp", version = "0.1.0" }
copilot-lang = { path = "../copilot-lang", version = "0.1.0" }

[lints]
workspace = true
