[package]
name = "copilot-libs"
description = "Temporal logic, clocks, voting, and state machines for copilot-rs specifications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
copilot-lang = { path = "../copilot-lang", version = "0.1.0" }

[dev-dependencies]
copilot-core = { path = "../copilot-core", version = "0.1.0" }
copilot-interp = { path = "../copilot-interp", version = "0.1.0" }

[lints]
workspace = true
